# kernelupdatenotifier

./: CMakeLists.txt  README.md  kernelupdatenotifier.cpp  kernelupdatenotifier.h  kernelupdatenotifier.notifyrc  main.cpp
